--- a/2_4_print_tipe_data [12191702].ipynb
+++ b/2_4_print_tipe_data [12191702].ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
-    "id": "4dfSpquWCSJc"
+    "id": "4dfSpquWCSJc",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -21,29 +22,29 @@
       "(1, 2, 3, 4, 5)\n",
       "('satu', 'dua', 'tiga')\n",
       "{'nama': 'Budi', 'umur': 20}\n",
-      "{'nama': 'Andi', 'umur': 21}\n"
+      "{'nama': 'Andi', 'umur': 21}\n",
+      "Mari Belajar Python\n",
+      "10\n",
+      "3.14\n",
+      "[1, 2, 3, 4]\n",
+      "('satu', 'dua', 'tiga')\n",
+      "{'nama': 'Ali', 'umur': 20}\n",
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#tipe data Boolean\n",
     "print(True)\n",
     "\n",
-    "\n",
     "#tipe data String\n",
     "print(\"Mari belajar Python\")\n",
     "print('Belajar Python Sangat Dengan Mudah')\n",
-    "\n",
     "\n",
     "#tipe data Integer\n",
     "print(20)\n",
@@ -51,7 +52,6 @@
     "\n",
     "#tipe data Float\n",
     "print(3.14)\n",
-    "\n",
     "\n",
     "#tipe data List\n",
     "print([1,2,3,4,5])\n",
@@ -62,14 +62,37 @@
     "print((1,2,3,4,5))\n",
     "print((\"satu\", \"dua\", \"tiga\"))\n",
     "\n",
-    "\n",
     "#tipe data Dictionary\n",
     "print({\"nama\":\"Budi\", 'umur':20})\n",
     "\n",
     "#tipe data Dictionary dimasukan ke dalam variabel biodata\n",
     "biodata = {\"nama\":\"Andi\", 'umur':21} #proses inisialisasi variabel biodata\n",
+    "\n",
     "print(biodata) #proses pencetakan variabel biodata yang berisi tipe data Dictionary\n",
-    "type(biodata) #fungsi untuk mengecek jenis tipe data. akan tampil <class 'dict'>"
+    "type(biodata) #fungsi untuk mengecek jenis tipe data. akan tampil <class 'dict'>\n",
+    "\n",
+    "\n",
+    "var_string=\"Mari Belajar Python\"\n",
+    "var_int=10\n",
+    "var_float=3.14\n",
+    "var_list=[1,2,3,4]\n",
+    "var_tuple=(\"satu\",\"dua\",\"tiga\")\n",
+    "var_dict={\"nama\":\"Ali\", 'umur':20}\n",
+    "\n",
+    "\n",
+    "print(var_string)\n",
+    "print(var_int)\n",
+    "print(var_float)\n",
+    "print(var_list)\n",
+    "print(var_tuple)\n",
+    "print(var_dict)\n",
+    "\n",
+    "print(type(var_string))\n",
+    "print(type(var_int))\n",
+    "print(type(var_float))\n",
+    "print(type(var_list))\n",
+    "print(type(var_tuple))\n",
+    "print(type(var_dict))\n"
    ]
   },
   {
@@ -121,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ujERTDu_9Udi"
    },
@@ -166,7 +189,13 @@
    },
    "outputs": [],
    "source": [
-    "#Jawab Tugas Praktek 3.3 Nomor 1\n"
+    "#Jawab Tugas Praktek 3.3 Nomor 1\n",
+    "Mari Belajar Python\n",
+    "10\n",
+    "3.14\n",
+    "[1, 2, 3, 4]\n",
+    "('satu', 'dua', 'tiga')\n",
+    "{'nama': 'Ali', 'umur': 20}"
    ]
   },
   {
@@ -194,7 +223,19 @@
    },
    "outputs": [],
    "source": [
-    "#Jawab Tugas Praktek 3.3 Nomor 2\n"
+    "#Jawab Tugas Praktek 3.3 Nomor 2\n",
+    "Mari Belajar Python\n",
+    "10\n",
+    "3.14\n",
+    "[1, 2, 3, 4]\n",
+    "('satu', 'dua', 'tiga')\n",
+    "{'nama': 'Ali', 'umur': 20}\n",
+    "<class 'str'>\n",
+    "<class 'int'>\n",
+    "<class 'float'>\n",
+    "<class 'list'>\n",
+    "<class 'tuple'>\n",
+    "<class 'dict'>"
    ]
   }
  ],
